--- a/frontend/src/pages/Admin/adminComponents/AdminNavbar.module.css
+++ b/frontend/src/pages/Admin/adminComponents/AdminNavbar.module.css
@@ -1,11 +1,13 @@
 .admin-navbar {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    max-height: 70px;
-    padding: 10px 3rem;
-  }
-.logOut{
-   background-color: inherit;  
-   border: 0;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-height: 70px;
+  padding: 10px 3rem;
+}
+.logOut {
+  background-color: inherit;
+  border: 0;
+  margin-left: 15px;
+  margin-bottom: 15px;
 }
