--- a/frontend/src/pages/Admin/adminComponents/SearchStyles.module.css
+++ b/frontend/src/pages/Admin/adminComponents/SearchStyles.module.css
@@ -36,7 +36,7 @@
   background-color: #f7f9fa;
   border: 1px solid #1c1d1f;
   display: flex;
-  flex-grow: 1;
+
   margin-top: 30px;
   margin-bottom: 100px;
 }
@@ -59,5 +59,28 @@
 }
 
 .misc {
-  margin: auto 50px;
+  margin: 20px 50px;
+}
+
+.setPromotion {
+  margin: 70px 0;
+  max-width: 50%;
+  gap: 2rem;
+}
+
+@media only screen and (max-width: 1140px) {
+  .promo-container {
+    flex-direction: column;
+  }
+
+  .misc {
+    display: flex;
+    gap: 30px;
+  }
+
+  .setPromotion {
+    margin: 0;
+    max-width: 50%;
+    gap: 2rem;
+  }
 }
