--- a/frontend/src/pages/Admin/AddInstructor.css
+++ b/frontend/src/pages/Admin/AddInstructor.css
@@ -97,3 +97,17 @@
   align-items: center;
   justify-content: center;
 }
+
+.alertContainer {
+  width: 80%;
+  font-size: 20px;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left {
+  height: 100%;
+  vertical-align: middle;
+}
