--- a/frontend/src/pages/Admin/AddInstructor.css
+++ b/frontend/src/pages/Admin/AddInstructor.css
@@ -1,81 +1,99 @@
-.newContainer{
-  margin-top: 2rem;}
-.newContainer h1{
-  color: rgb(186, 179, 179);
-  margin-left: 2rem;
-  font-size: 1.3rem;
-  font-weight: bold;
+.newContainer {
+  /* background-color: rgb(0, 0, 0); */
+  padding: 20px;
 }
-  .inputClass{
-    width: 100%;
-    padding: 5px;
-    border: none;
-    border-bottom: 1px solid gray;
-  }
-  .labelClass {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  
-  .bottom {
-   background-color: white;
-    padding: 10px;
-    margin: 20px;
-    display: flex;
-  }
-  
-  .imgClass {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  .right {
-    flex: 2;
-  }
-  .formInput {
-    width: 40%;
-  }
-  .formClass {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: space-around;
-  }
-  .new {
-    width: 100%;
-    display: flex;
-  }
-  .newContainer {
-    flex: 6;
-  }
-  .required {
-    color: red;
-  }
-  .title {
-    color: #ff6529;
-    margin-bottom: 30px;
-    padding: 20px;
-    border-bottom: 1px solid #f2f2f2;
-  }
-  
-  .buttonClass {
-    width: 150px;
-    border: none;
-    background-color:rgb(66, 104, 246);
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  .selectClass {
-    width: 30%;
-    padding: 12px 20px;
-    margin-right: 50px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
+.inputClass {
+  width: 100%;
+  max-width: 300px;
+  padding: 5px;
+  border: none;
+  font-size: 20px;
+  border-bottom: 1px solid gray;
+}
+.labelClass {
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.bottom {
+  border-radius: 25px;
+  background-color: #f2f2f2;
+
+  padding: 30px;
+  margin: 20px;
+  display: flex;
+}
+
+.imgClass {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.right {
+  flex: 2;
+}
+.formInput {
+  width: 40%;
+}
+.h1Class {
+  margin-left: 20px;
+  margin-top: 20px;
+  color: rgb(50, 50, 50);
+  font-size: 36px;
+  font-weight: 500;
+}
+.formClass {
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.new {
+  width: 100%;
+  display: flex;
+}
+.newContainer {
+  flex: 6;
+}
+.required {
+  color: red;
+}
+.title {
+  color: #ff6529;
+  margin-bottom: 30px;
+  padding: 20px;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.buttonClass {
+  width: 150px;
+  font-size: 20px;
+  border: none;
+  background-color: rgb(66, 104, 246);
+  color: white;
+  font-weight: bold;
+  height: 50px;
+  cursor: pointer;
+  /* display: inline-block; */
+  /* margin: auto; */
+}
+.selectClass {
+  width: 30%;
+  height: 20px;
+  padding: 12px 20px;
+  margin-right: 50px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.buttonContainer {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
