--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -17,6 +17,7 @@
   max-height: 70px;
   width: 80%;
   margin-left: 10%;
+  margin-bottom: 0.5rem;
   border-bottom: 1px solid #f2f2f2;
   padding: 0.3rem 1rem;
 }
@@ -28,7 +29,7 @@
   color: black;
   margin-left: 5rem;
   border: none;
-  border-bottom: 5px solid  rgba(192,4,24,255);
+  border-bottom: 2px solid  rgba(192,4,24,255);
 }
 .notPressed{
   background-color: white;
@@ -37,7 +38,7 @@
   border: none;
 }
 .notPressed:hover {
-  border-bottom: 5px solid rgba(192,4,24,255); ;
+  border-bottom: 2px solid rgba(192,4,24,255); ;
 }
 .accordion-button:not(.collapsed) {
   color: #ffffff;
