make alerts working admin

--- a/frontend/src/pages/Admin/AddInstructor.css
+++ b/frontend/src/pages/Admin/AddInstructor.css
@@ -82,6 +82,7 @@
   font-weight: bold;
   height: 50px;
   cursor: pointer;
+  border-radius: 25px;
   /* display: inline-block; */
   /* margin: auto; */
 }
