--- a/frontend/src/pages/Course/SubtitleView.module.css
+++ b/frontend/src/pages/Course/SubtitleView.module.css
@@ -44,6 +44,11 @@
     
 
 }
+
 .check{
-    justify-content: end;
+    color: #a00407;
+    justify-content: right;
+}
+.gradeBadge{
+    background-color: #a00407 !important;
 }
