--- a/frontend/src/components/Filter.module.css
+++ b/frontend/src/components/Filter.module.css
@@ -5,12 +5,11 @@
 }
 .top {
   height: 50px;
-  display: grid;
+  display: flex;
+  gap: 1rem;
   align-items: center;
 }
 .logo {
-  width: 50%;
-  margin: 0 auto;
   border-radius: 0.25rem;
   font-weight: bold;
   font-family: "Open Sans", sans-serif;
@@ -33,4 +32,14 @@
 }
 .check {
   margin-top: 0.4rem;
+}
+.edit {
+  border-radius: 0.25rem;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+  font-weight: 700;
+  font-family: "Open Sans", sans-serif;
+  padding: 0.5rem;
+  background-color: white;
+  border: 0.5px solid rgb(111, 109, 109);
 }
