--- a/frontend/src/pages/Course/Courses.module.css
+++ b/frontend/src/pages/Course/Courses.module.css
@@ -59,3 +59,9 @@
   background-color: white;
   border: 0.5px solid rgb(111, 109, 109);
 }
+
+@media only screen and (max-width: 650px) {
+  .wrapper-left {
+    display: none;
+  }
+}
