--- a/frontend/src/components/Inprogress.module.css
+++ b/frontend/src/components/Inprogress.module.css
@@ -1,31 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
-.Wrapper{
-    min-height: 50rem;
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
+.Wrapper {
+  min-height: 50rem;
 }
-.courses{
-    margin-left: 10rem;
-    margin-top: 2rem;
+.courses {
+  max-width: 1500px;
+  width: 70%;
+  margin: 50px auto;
 }
-.main-section{
-    background-color: rgb(111, 111, 111);
-    width: 100%;
-    display: flex;
-    padding: 3rem;
+.main-section {
+  background-color: rgb(111, 111, 111);
+  width: 100%;
+  display: flex;
 }
-.main-section h1{
-    font-family: 'Abril Fatface';
-    font-size: 2.5rem;
-    color: white;
-    margin-left: 10rem;
-
+.main-section h1 {
+  font-family: "Abril Fatface";
+  font-size: 2.5rem;
+  color: white;
+  max-width: 1500px;
+  width: 70%;
+  margin: 50px auto;
+  padding-left: 15px;
 }
-.main-btn{
-    border: none;
-    background-color: #a00407;
-    border-radius: 0.2rem;
-    padding: 0.5rem;
-    color: white;
+.main-btn {
+  border: none;
+  background-color: #a00407;
+  border-radius: 0.2rem;
+  padding: 0.5rem;
+  color: white;
+  float: right;
+  margin-right: 70px;
+  margin-top: 50px;
 }
-.main-btn:hover{
-    background-color: #670204;
+.main-btn:hover {
+  background-color: #670204;
 }
