--- a/frontend/src/components/CoursePreview.module.css
+++ b/frontend/src/components/CoursePreview.module.css
@@ -1,71 +1,99 @@
-.mainlabel{
-    color: rgb(97, 94, 94);
-    font-size: 1.5rem;
-    margin-top: 2rem;
+.mainlabel {
+  color: rgb(97, 94, 94);
+  font-size: 1.5rem;
+  margin-top: 2rem;
 }
-.mainRight{
-    min-height: 220vh;
+.mainRight {
+  max-width: 1200px;
+  width: 75%;
+  margin: auto;
+  min-height: 220vh;
 }
-.mainRight-hr{
-    height: 3px;
-    background-color: #000;
-    margin-top: 2rem;
+.mainRight-hr {
+  height: 3px;
+  background-color: #000;
+  margin-top: 2rem;
+  width: 90%;
 }
-.mainRight h1{
-    font-size: 2.5rem;
-    font-weight: bold;
-    font-family: Tahoma, sans-serif;
-    color: rgb(33, 32, 32);
-    margin-bottom: 2rem;
-    margin-top: 2rem;
+.mainRight h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  font-family: Tahoma, sans-serif;
+  color: rgb(33, 32, 32);
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
-.mainRight h3{
-    font-size: 1.3rem;
-    font-weight: bold;
-    font-family: Tahoma, sans-serif;
-    color: rgb(33, 32, 32);
-    margin-top: 2rem;
-    margin-bottom: 1rem;
+.mainRight h3 {
+  font-size: 1.3rem;
+  font-weight: bold;
+  font-family: Tahoma, sans-serif;
+  color: rgb(33, 32, 32);
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 .mainRight p {
-    margin-left: 1rem;
-    font-weight: bold;
+  margin-left: 1rem;
+  font-weight: bold;
 }
-.video{
-    margin-left: 1rem;
+.video {
+  margin-left: 1rem;
 }
-.rating{
-    margin-bottom: 2rem;
+.rating {
+  margin-bottom: 2rem;
 }
-.progressbar{
-    margin-top: 1rem;
-    height: 1rem;
-    width: 50rem;
-}
-.notFound{
-    display: grid;
-    align-items: center;
-    justify-content: center;
-}
-.mainRight-rating{
-    display: grid;
-    align-items: center;
-}
-.mainRight-rating h3{
-    font-size: 1.3rem;
-    align-items: center;
-    font-family: bolder;
-    font-family: 'Open Sans', sans-serif;
-}
-.rating-box{
-    display: grid;
-    gap: 2rem;
-    margin-bottom: 2rem;
+.progress-container {
+  width: 100%;
 }
 
-.progress-left{
-    display: flex;
-    margin-left: 1rem;
+.progressbar-container {
+  width: 90%;
+}
+.progressbar {
+  width: 100%;
+  margin-top: 1rem;
+  height: 1rem;
+}
+.notFound {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+.mainRight-rating {
+  display: grid;
+  align-items: center;
+}
+.mainRight-rating h3 {
+  font-size: 1.3rem;
+  align-items: center;
+  font-family: bolder;
+  font-family: "Open Sans", sans-serif;
+}
+.rating-box {
+  display: grid;
+  gap: 2rem;
+  margin-bottom: 2rem;
 }
 
+.progress-left {
+  display: flex;
+  margin-left: 1rem;
+}
 
+.iframe-container {
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
