--- a/frontend/src/components/CourseContent.module.css
+++ b/frontend/src/components/CourseContent.module.css
@@ -4,13 +4,17 @@
   margin-top: 2rem;
 }
 .mainRight {
-  width: 80%;
-  max-width: 700px;
-  margin: 20px 0;
+  display: grid;
+  grid-template-columns: 80% 20%;
+  gap: 10%;
+  margin-top: 2rem;
+} 
+
+.main-right-right{
+  margin-top: 70%;
 }
 .subtitles {
   margin-top: 2rem;
-  width: 80%;
   min-width: 400px;
 }
 
