--- a/frontend/src/pages/Course/Course.module.css
+++ b/frontend/src/pages/Course/Course.module.css
@@ -1,59 +1,60 @@
 .course {
   width: 100%;
   display: inline-block;
-  /* min-height: 200vh; */
 }
 .mainSection {
   width: 100%;
-  /* min-height: 45vh; */
-  margin-top: 10px;
-  /* display: grid; */
-  grid-template-columns: 70% 35%;
+  display: flex;
+  height: 50vh;
+  display: flex;
   align-items: center;
   background-color: rgb(70, 70, 70);
   background-position: center;
-  padding: 50px 30px;
 }
-/* .mainSection-left{
-  padding-left: 15rem;
-  padding-top: 1.3rem; */
-/* } */
+.mainSection-left{
+  width: 50%;
+  margin-left: 10%;
+}
 .mainSection h1 {
   color: #fff;
-  font-size: 3.1rem;
+  font-size:3vw;
   font-weight: bold;
   font-family: "Open Sans", sans-serif;
 }
 .mainSection h2 {
   color: #fff;
-  font-size: 1.2rem;
+  font-size: 1.1vw;
   font-weight: 100;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 0.5rem;
 }
 .mainSection-left-rating {
   display: flex;
+  font-size: 1vw;
   font-family: "Open Sans", sans-serif;
   color: white;
   margin-bottom: 0.5rem;
 }
 .mainSection-left-rating label {
   color: white;
+  font-size: 1vw;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 0.5rem;
 }
 .mainSection-left-language label {
   color: white;
+  font-size: 1vw;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 0.5rem;
 }
 .instlabel {
   color: white;
+  font-size: 1vw;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 0.5rem;
 }
-.mainSection-right {
-  width: 60%;
+.mainSection-right{
+  margin-left: 10vw;
   padding: 0;
   margin-top: 0.5rem;
   box-shadow: rgba(226, 45, 45, 0.16) 0px 1px 4px;
@@ -91,6 +92,14 @@
   font-size: 1.3rem;
   font-weight: bold;
   color: rgb(0, 0, 0);
+  margin-left: 1rem;
+  border: none;
+}
+.purchase{
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  color:#a00407;
   margin-left: 1rem;
   border: none;
 }
@@ -235,5 +244,8 @@
 
   .middle-right {
     margin: 25px auto;
+  }
+  .mainSection-left{
+    margin: 10rem;
   }
 }
