--- a/frontend/src/pages/Course/AskInstructor.module.css
+++ b/frontend/src/pages/Course/AskInstructor.module.css
@@ -7,3 +7,13 @@
 .container{
     display: flex;
 }
+.button {
+    background-color: "#a00407";
+    color: "white";
+    padding: "12px 20px";
+    border: "none";
+    border-radius: "4px";
+    cursor: "pointer";
+    float: "right";
+    width: "100px";
+  }
