--- a/frontend/src/pages/Course/Courses.module.css
+++ b/frontend/src/pages/Course/Courses.module.css
@@ -16,6 +16,8 @@
 .wrapper-right {
   flex: 8;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   min-height: 130vh;
 }
 .wrapper-right h1 {
@@ -60,7 +62,9 @@
   background-color: white;
   border: 0.5px solid rgb(111, 109, 109);
 }
-
+.pagination{
+  margin-left: auto;
+}
 @media only screen and (max-width: 650px) {
   .wrapper-left {
     display: none;
