--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 .home{
    display: flex;
    flex-direction: column;
@@ -64,7 +65,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgb(111, 111, 111);
+  background-color: rgb(0, 0, 0);
   width: 100%;
   padding-top: 40px;
   color: #fff;
@@ -73,26 +74,28 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  text-align: center;
+}
+.footer-content-right{
+  margin-right: 40px;
 }
 .footer-content h3{
   font-size: 2.1rem;
+  font-family: 'Lobster', cursive;
   font-weight: 500;
   text-transform: capitalize;
-  line-height: 3rem;
+
 }
 .footer-content p{
   max-width: 500px;
-  margin: 10px auto;
   line-height: 28px;
   font-size: 14px;
+  margin-left: 10px;
   color: #cacdd2;
 }
 .footer-bottom{
   width: 100%;
-  padding: 20px;
-  padding-bottom: 40px;
+  padding-left: 30px;
+
   text-align: center;
 }
 .footer-bottom p{
