--- a/frontend/src/pages/Admin/adminComponents/AdminFilter.module.css
+++ b/frontend/src/pages/Admin/adminComponents/AdminFilter.module.css
@@ -10,11 +10,12 @@
   display: block;
   width: 50%;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   border-radius: 0.25rem;
   font-weight: bold;
   font-family: "Open Sans", sans-serif;
-  padding: 0.5rem;
+  padding: 5px;
   background-color: white;
   border: 0.5px solid rgb(111, 109, 109);
   align-self: center;
