--- a/frontend/src/pages/Admin/adminComponents/AdminNavbar.module.css
+++ b/frontend/src/pages/Admin/adminComponents/AdminNavbar.module.css
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   width: 100%;
+  border-bottom: 1px solid #e0e0e0;
+  margin-bottom: 10px;
   padding: 10px 3rem;
 }
 .logOut {
