--- a/frontend/src/pages/Admin/adminComponents/SearchStyles.module.css
+++ b/frontend/src/pages/Admin/adminComponents/SearchStyles.module.css
@@ -1,28 +1,3 @@
-.navbar {
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-  max-height: 70px;
-  width: 100%;
-  padding: 10px 2rem;
-  border-bottom: 1px solid #f2f2f2;
-  box-shadow: rgb(0 0 0 / 20%) 0px 0px 10px;
-}
-.linkContainer {
-  margin-left: auto;
-}
-
-.links {
-  color: black;
-  margin-right: 1rem;
-  text-decoration: none;
-  padding: 6px;
-}
-
-.links:hover {
-  color: rgba(192, 4, 24, 255);
-  background-color: rgba(209, 211, 212, 0.379);
-}
 .inpt {
   border: 0px;
   margin: 10px 20px 10px 10px;
@@ -36,22 +11,12 @@
   background-color: #f7f9fa;
   border: 1px solid #1c1d1f;
   display: flex;
-
-  margin-top: 30px;
-  margin-bottom: 100px;
+  margin-top: 10px;
 }
 
 .search-icon {
   margin: 15px 0 0 15px;
   cursor: pointer;
-}
-.dropUser {
-  position: relative;
-  padding: 0.3rem;
-  cursor: pointer;
-}
-.dropUser:hover {
-  color: rgba(192, 4, 24, 255);
 }
 
 .promo-container {
@@ -60,12 +25,17 @@
 
 .misc {
   margin: 20px 50px;
+  display: flex;
+  flex-direction: column;
 }
 
 .setPromotion {
-  margin: 70px 0;
-  max-width: 50%;
-  gap: 2rem;
+  margin-top: 40px;
+  padding: 10px;
+  border: 0.5px solid rgb(111, 109, 109);
+
+
+
 }
 
 @media only screen and (max-width: 1140px) {
