--- a/frontend/src/pages/Admin/AddInstructor.css
+++ b/frontend/src/pages/Admin/AddInstructor.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Changa:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .newContainer {
-  /* background-color: rgb(0, 0, 0); */
   padding: 20px;
 }
 .inputClass {
@@ -10,13 +11,13 @@
   border: none;
   font-size: 20px;
   margin-top: 15px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   background-color: white;
   border: 1px solid rgb(rgb(228, 228, 228), green, blue);
 }
 .labelClass {
-  font-size: 25px;
+  font-size: 20px;
   display: flex;
+  font-family: 'Poppins', sans-serif;
   align-items: center;
   gap: 10px;
 }
@@ -43,7 +44,8 @@
   margin-top: 20px;
   color: rgb(50, 50, 50);
   font-size: 36px;
-  font-weight: 500;
+  font-family: 'Changa', sans-serif;
+  font-weight: bold;
 }
 .formClass {
   justify-content: space-between;
@@ -75,11 +77,8 @@
   background-color: rgb(66, 104, 246);
   color: white;
   font-weight: bold;
-  height: 50px;
-  cursor: pointer;
-  border-radius: 5px;
-  /* display: inline-block; */
-  /* margin: auto; */
+  padding: 10px;
+  border-radius: 0px;
 }
 .selectClass {
   width: 30%;
