--- a/frontend/src/components/CourseContent.module.css
+++ b/frontend/src/components/CourseContent.module.css
@@ -5,9 +5,10 @@
 }
 .mainRight {
   display: grid;
+  margin-left: 2rem;
   grid-template-columns: 80% 20%;
   gap: 10%;
-  margin-top: 2rem;
+  margin-top: 0.5rem;
 } 
 
 .main-right-right{
