--- a/frontend/src/pages/Course/PrevReports.module.css
+++ b/frontend/src/pages/Course/PrevReports.module.css
@@ -18,3 +18,13 @@
     padding-top: 2%;
     padding-bottom: 2%;
 }
+.reportedProblem{
+    margin-top: 3%;
+    margin-left: 10%;
+}
+.reportedProblem h1{
+    font-size: 2vw;
+    color: #a00407;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
