--- a/frontend/src/pages/Instructor/AnswerTrainee.module.css
+++ b/frontend/src/pages/Instructor/AnswerTrainee.module.css
@@ -1,13 +1,17 @@
-.mainRight {
-    max-width: 1200px;
-    width: 75%;
-  }
-  
+
   .right {
-    width: 70%;
-    margin: 20px auto;
+    width: 75%;
+    margin:  3% 0 0 2%;
+
   }
-  
+  .mainRight{
+    margin-left: 2%;
+  }
+  .mainlabel {
+    color: rgb(97, 94, 94);
+    font-size: 1.5rem;
+    margin-bottom: 2%;
+  }
   .container {
     display: flex;
   }
