--- a/frontend/src/components/Inprogress.module.css
+++ b/frontend/src/components/Inprogress.module.css
@@ -24,12 +24,20 @@
 .main-btn {
   border: none;
   background-color: #a00407;
-  border-radius: 0.2rem;
+  border-radius: 0;
   padding: 0.5rem;
   color: white;
-  margin-right: 70px;
+  margin-left: auto;
   margin-top: 5px;
 }
 .main-btn:hover {
   background-color: #670204;
+}
+
+.filter{
+ display: flex;
+ flex-direction: column;
+}
+.filter label{
+  font-weight: bold;
 }
